# IIOT_streaming

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  specification.md
.agent/workflows/: prepare-pr.md  validate-infra.md
.github/workflows/: ci.yml
grafana/provisioning/dashboards/: iiot_dashboard.json  provider.yml
grafana/provisioning/datasources/: datasource.yml
schemas/: telemetry.avsc
src/consumers/: telemetry_consumer.py
src/producers/: simulator.py
src/utils/: debug_consumer.py  validate_infra.py
tests/: test_consumer.py  test_debug.py  test_simulator.py  test_utils.py
