[project]
name = "iiot-streaming"
version = "0.1.0"
description = "Industrial IoT Real-Time Monitoring POC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka",
    "psycopg2-binary",
    "requests",
    "avro",
    "fastavro",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "types-requests",
    "types-psycopg2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.uv]
managed = true
